--- a/apps/index.html
+++ b/apps/index.html
@@ -17,7 +17,7 @@
     <header class="site-header">
       <div class="site-header-inner container">
         <a href="/" class="brand">
-          <img src="../assets/img/opsoh-logo.png" alt="OpsOh logo" class="brand-logo" />
+          <img src="/assets/img/opsoh-logo.png" alt="OpsOh logo" class="brand-logo" />
           <span class="brand-name">OpsOh</span>
         </a>
 
@@ -57,7 +57,7 @@
               <article class="app-card">
                 <div class="app-card-header">
                   <img
-                    src="../assets/img/split-merge-pdf.jpg"
+                    src="/assets/img/split-merge-pdf.jpg"
                     alt="Split Merge PDF app icon"
                     class="app-icon"
                   />
@@ -85,7 +85,7 @@
               <article class="app-card">
                 <div class="app-card-header">
                   <img
-                    src="../assets/img/scansignpdf.jpg"
+                    src="/assets/img/scansignpdf.jpg"
                     alt="ScanSignPDF app icon"
                     class="app-icon"
                   />
@@ -113,7 +113,7 @@
               <article class="app-card">
                 <div class="app-card-header">
                   <img
-                    src="../assets/img/rename-photos.jpg"
+                    src="/assets/img/rename-photos.jpg"
                     alt="Images to PDF app placeholder icon"
                     class="app-icon"
                   />
@@ -134,7 +134,7 @@
               <article class="app-card">
                 <div class="app-card-header">
                   <img
-                    src="../assets/img/photo-pdf-maker.png"
+                    src="/assets/img/photo-pdf-maker.png"
                     alt="PhotoPDF Maker app icon"
                     class="app-icon"
                   />
@@ -147,8 +147,8 @@
                 </div>
                 <p class="app-meta">PDF tools · iPhone</p>
                 <div class="app-footer">
-                  <!-- Wire this once the public App Store URL is visible -->
                   <span class="pill pill-muted">New</span>
+                  <!-- Add App Store link here when available -->
                 </div>
               </article>
             </div>
@@ -168,7 +168,7 @@
               <article class="app-card">
                 <div class="app-card-header">
                   <img
-                    src="../assets/img/clean-screenshot.jpeg"
+                    src="/assets/img/clean-screenshot.jpeg"
                     alt="Clean Screenshot app icon"
                     class="app-icon"
                   />
@@ -189,7 +189,7 @@
               <article class="app-card">
                 <div class="app-card-header">
                   <img
-                    src="../assets/img/heic-to-jpeg.jpg"
+                    src="/assets/img/heic-to-jpeg.jpg"
                     alt="Photo HEIC to JPEG app icon"
                     class="app-icon"
                   />
@@ -217,7 +217,7 @@
               <article class="app-card">
                 <div class="app-card-header">
                   <img
-                    src="../assets/img/attachments-to-pdf.jpg"
+                    src="/assets/img/attachments-to-pdf.jpg"
                     alt="Attachments to PDF app icon"
                     class="app-icon"
                   />
@@ -238,6 +238,81 @@
                   >
                     View on the App Store
                   </a>
+                </div>
+              </article>
+            </div>
+          </div>
+
+          <!-- Weather & wellness -->
+          <div class="section-block">
+            <div class="section-header">
+              <h2 class="section-title">Weather &amp; wellness</h2>
+              <p class="section-caption">
+                Apps for safe sun, smarter driving, and staying hydrated.
+              </p>
+            </div>
+
+            <div class="apps-grid">
+              <!-- UVSmart -->
+              <article class="app-card">
+                <div class="app-card-header">
+                  <img
+                    src="/assets/img/uvsmart.jpg"
+                    alt="UVSmart app icon"
+                    class="app-icon"
+                  />
+                  <div>
+                    <h3 class="app-name">UVSmart</h3>
+                    <p class="app-summary">
+                      Check UV index and get simple guidance before you step outside.
+                    </p>
+                  </div>
+                </div>
+                <p class="app-meta">Weather · iPhone</p>
+                <div class="app-footer">
+                  <a href="#" class="button-outline">View on the App Store</a>
+                </div>
+              </article>
+
+              <!-- EVSmart -->
+              <article class="app-card">
+                <div class="app-card-header">
+                  <img
+                    src="/assets/img/evsmart.jpg"
+                    alt="EVSmart app icon"
+                    class="app-icon"
+                  />
+                  <div>
+                    <h3 class="app-name">EVSmart</h3>
+                    <p class="app-summary">
+                      Estimate EV range and charging time with simple sliders.
+                    </p>
+                  </div>
+                </div>
+                <p class="app-meta">EV tools · iPhone</p>
+                <div class="app-footer">
+                  <a href="#" class="button-outline">View on the App Store</a>
+                </div>
+              </article>
+
+              <!-- DrinQ -->
+              <article class="app-card">
+                <div class="app-card-header">
+                  <img
+                    src="/assets/img/drinq.jpg"
+                    alt="DrinQ app icon"
+                    class="app-icon"
+                  />
+                  <div>
+                    <h3 class="app-name">DrinQ</h3>
+                    <p class="app-summary">
+                      Track daily hydration with a clean, on-device water log.
+                    </p>
+                  </div>
+                </div>
+                <p class="app-meta">Health · iPhone</p>
+                <div class="app-footer">
+                  <a href="#" class="button-outline">View on the App Store</a>
                 </div>
               </article>
             </div>
