--- a/index.html
+++ b/index.html
@@ -48,12 +48,25 @@
             <a
               href="https://apps.apple.com/us/developer/giorgio-vitali/id1855313963"
               class="app-store-link"
+              style="display:inline-flex; align-items:center; justify-content:center;"
             >
-              <img
-                src="/assets/img/_App_Store_Badge_US.svg"
-                alt="Download OpsOh apps on the App Store"
-                class="app-store-badge"
-              />
+              <!-- Badge wrapper: makes it visible even on light backgrounds -->
+              <span
+                style="display:inline-flex; align-items:center; justify-content:center; background:#000; border-radius:12px; padding:10px 14px;"
+              >
+                <img
+                  src="assets/img/_App_Store_Badge_US.svg"
+                  alt="Download OpsOh apps on the App Store"
+                  style="height:40px; width:auto; display:block;"
+                  onerror="this.style.display='none'; this.nextElementSibling.style.display='inline-flex';"
+                />
+                <!-- Fallback if the image fails to load (no broken icon) -->
+                <span
+                  style="display:none; color:#fff; font-weight:600; font-family:system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,sans-serif; font-size:14px; padding:6px 10px;"
+                >
+                  View on the App Store
+                </span>
+              </span>
             </a>
           </div>
         </div>
