--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 style="display:inline-flex; align-items:center; justify-content:center; background:#000; border-radius:12px; padding:10px 14px;"
               >
                 <img
-                  src="assets/img/_App_Store_Badge_US.svg"
+                  src="./assets/img/_App_Store_Badge_US.svg"
                   alt="Download OpsOh apps on the App Store"
                   style="height:40px; width:auto; display:block;"
                   onerror="this.style.display='none'; this.nextElementSibling.style.display='inline-flex';"
