--- a/index.html
+++ b/index.html
@@ -48,25 +48,14 @@
             <a
               href="https://apps.apple.com/us/developer/giorgio-vitali/id1855313963"
               class="app-store-link"
-              style="display:inline-flex; align-items:center; justify-content:center;"
+              target="_blank"
+              rel="noopener noreferrer"
             >
-              <!-- Badge wrapper: makes it visible even on light backgrounds -->
-              <span
-                style="display:inline-flex; align-items:center; justify-content:center; background:#000; border-radius:12px; padding:10px 14px;"
-              >
-                <img
-                  src="./assets/img/App_Store_Badge_US.svg"
-                  alt="Download OpsOh apps on the App Store"
-                  style="height:40px; width:auto; display:block;"
-                  onerror="this.style.display='none'; this.nextElementSibling.style.display='inline-flex';"
-                />
-                <!-- Fallback if the image fails to load (no broken icon) -->
-                <span
-                  style="display:none; color:#fff; font-weight:600; font-family:system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,sans-serif; font-size:14px; padding:6px 10px;"
-                >
-                  View on the App Store
-                </span>
-              </span>
+              <img
+                src="./assets/img/App_Store_Badge_US.svg"
+                alt="Download OpsOh apps on the App Store"
+                style="height:48px; width:auto; display:block;"
+              />
             </a>
           </div>
         </div>
@@ -253,7 +242,6 @@
               <p class="app-meta">PDF tools · iPhone</p>
               <div class="app-footer">
                 <span class="pill pill-muted">New</span>
-                <!-- Add App Store link here when you have it -->
               </div>
             </article>
           </div>
